feat: CLIN-xxxx clean-up